Solved the overflowing of Login form  for screen sizes below 420px  (#200)
* Updated Tech Stack Icons

* Added Media Query for login form

---------

--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -124,6 +124,24 @@
     letter-spacing: 0.5px;
     margin: -12px auto 0 0;
 }
+
+@media (max-width: 420px) {
+    .login_form_container {
+        padding: 20px;
+    }
+
+    .login_form_container h1 {
+        font-size: 28px;
+    }
+
+    .login_form_container form input {
+        font-size: 12px;
+    }
+
+    .login_form_container button {
+        font-size: 14px;
+    }
+}
 .login_form_container form button{
     width: 8rem;
     height:2.5rem;
